vm3/out
number.cpp:24:9: error: expected initializer before ‘<’ token
   24 | T Number<T>::getValue() const {
      |         ^
